# IGVC

./: .gitignore  .gitmodules  99-usb-serial.rules  README  install.sh  lidar.sh  requirements.txt  test-waypoints
CVTest/: camera_info.py  camera_msg.py  cameras.py  camtest.py  orange_remove_test.py  remove_orange.py  test_filter.py  vidtest.py
CVTest/back/: grip2.py
Drivetrain/: Control_Node.py  _8WorkingWheels_NoWrapAround.ino  _8WorkingWheels_NoWrapAround_JoystickPrints.ino  _8WorkingWheels_NoWrapAround_JoystickPrints_limit.ino  nRF24L01_receive  pinDef.h  pointRotation.py  pointRotationSub.py  pyJoyV3  wheelControl.cpp  wheelControl.h
Drivetrain/_8WorkingWheels_NoWrapAround/: _8WorkingWheels_NoWrapAround_JoystickPrints_limit.ino  nRF24L01_receive.ino  nRF24L01_transmit.ino  parsedCmd.h  pointRotation.py  pubTest.py  returnedVariables.h  wheelControl.h
Joystick/: .gitignore  README.md  joystick_launch.launch  launch.sh
Nav-Guidance/: #grip.py#  .gitignore  CMakeCache.txt  CTestTestfile.cmake  Makefile  README.md  __init__.py  camera_debug.py  camera_info.py  camera_msg.py  camera_msg_test.py  cameras.py  cmake_install.cmake  config.rviz  dev.sh  gps.py  gps_msg.py  gps_msg_test.py  grip.py  guidance.py  launch.sh  lidar.py  listener.py  logger.py  nav.py  nav_debug.py  nav_msg.py  navigation_launch.launch
Nav-Guidance/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  (+1 more)
cpp-slam/: .gitignore  CMakeLists.txt  Vec2d.cpp  Vec2d.h  feature_extraction.cpp  feature_extraction.h  main.cpp
(+147 files in other folders)
